// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-left: 10px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset:disabled .c5.c5 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c5.c5 {
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: #FFFFFF;
  border: 1px solid #717681;
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid #B0B5BD;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: default;
}

.c1:not(:checked):disabled+div>span {
  background-color: #E5E7EB;
}

.c1:checked:disabled+div>span {
  border: 5px solid #A7C7FF;
  background-color: #FFFFFF;
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid #0062FF;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 2px 0 2px 2px;
  user-select: none;
  cursor: default;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c0.c0 {
  padding: 1px 0 1px 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <label
        class="c0"
        disabled=""
      >
        <input
          class="c1"
          data-testid="element"
          disabled=""
          type="radio"
          value="radio1"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
            disabled=""
          />
        </div>
        <div
          class="c5"
          disabled=""
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-left: 10px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset:disabled .c5.c5 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c5.c5 {
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: #FFFFFF;
  border: 1px solid #717681;
  border-color: #B0B5BD;
  background-color: #E5E7EB;
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid #B0B5BD;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: default;
}

.c1:not(:checked):disabled+div>span {
  background-color: #E5E7EB;
}

.c1:checked:disabled+div>span {
  border: 5px solid #A7C7FF;
  background-color: #FFFFFF;
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid #0062FF;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 2px 0 2px 2px;
  user-select: none;
  cursor: default;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c0.c0 {
  padding: 1px 0 1px 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <label
      class="c0"
      disabled=""
    >
      <input
        class="c1"
        data-testid="element"
        disabled=""
        type="radio"
        value="radio1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
          disabled=""
        />
      </div>
      <div
        class="c5"
        disabled=""
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioButton should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-left: 10px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c5.c5 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c5.c5 {
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid #B0B5BD;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: default;
}

.c1:not(:checked):disabled+div>span {
  background-color: #E5E7EB;
}

.c1:checked:disabled+div>span {
  border: 5px solid #A7C7FF;
  background-color: #FFFFFF;
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid #0062FF;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 2px 0 2px 2px;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c0.c0 {
  padding: 1px 0 1px 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <label
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          type="radio"
          value="radio1"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-left: 10px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c5.c5 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c5.c5 {
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 20px;
  height: 20px;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid #B0B5BD;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: default;
}

.c1:not(:checked):disabled+div>span {
  background-color: #E5E7EB;
}

.c1:checked:disabled+div>span {
  border: 5px solid #A7C7FF;
  background-color: #FFFFFF;
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid #0062FF;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 2px 0 2px 2px;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c0.c0 {
  padding: 1px 0 1px 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <label
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        type="radio"
        value="radio1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RadioButton should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 14px);
  height: calc(100% + 14px);
  background-color: #0000000D;
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c5.c5 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c5.c5 {
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 18px;
  height: 18px;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid #B0B5BD;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  width: 18px;
  height: 18px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: default;
}

.c1:not(:checked):disabled+div>span {
  background-color: #E5E7EB;
}

.c1:checked:disabled+div>span {
  border: 5px solid #A7C7FF;
  background-color: #FFFFFF;
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid #0062FF;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 1px 0 1px 1px;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c0.c0 {
  padding: 1px 0 1px 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <label
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          type="radio"
          value="radio1"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: #0000000D;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 14px);
  height: calc(100% + 14px);
  background-color: #0000000D;
}

.c5 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset:disabled .c5.c5 {
  color: #B0B5BD;
}

fieldset[data-dimension='s'] .c5.c5 {
  margin-left: 9px;
  margin-top: 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c4 {
  display: inline-block;
  position: absolute;
  flex-shrink: 0;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: '';
  box-sizing: border-box;
  pointer-events: none;
  border-radius: 50%;
  transition: all 0.25s ease-in-out;
  width: 18px;
  height: 18px;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

fieldset[data-dimension='s'] .c4 {
  width: 18px;
  height: 18px;
}

fieldset:disabled .c4 {
  border: 1px solid #B0B5BD;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  border-radius: 50%;
  width: 18px;
  height: 18px;
}

fieldset[data-dimension='s'] .c2 {
  width: 18px;
  height: 18px;
}

.c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1:disabled {
  cursor: default;
}

.c1:not(:checked):disabled+div>span {
  background-color: #E5E7EB;
}

.c1:checked:disabled+div>span {
  border: 5px solid #A7C7FF;
  background-color: #FFFFFF;
}

.c1:checked:not(:disabled)+div>span {
  border: 5px solid #0062FF;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c1:not(:disabled):active:focus-visible+div {
  outline: none;
}

.c0 {
  display: flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 1px 0 1px 1px;
  user-select: none;
  cursor: pointer;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

fieldset[data-dimension='s'] .c0.c0 {
  padding: 1px 0 1px 1px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <label
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        type="radio"
        value="radio1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
